--- a/basic.html
+++ b/basic.html
@@ -8,32 +8,39 @@
     <script src="script.js" defer></script> <!----> link to an external JavaScript file
 </head> <!----> end of the head element
 <body> <!----> the body element contains the content of the document
-    <header> <!----> the header element contains introductory content
-        <h1>Welcome to My Website</h1> <!----> main heading of the document
-        <nav> <!----> the nav element contains navigation links
-            <ul> <!----> an unordered list
-                <li><a href="#home">Home</a></li> <!----> list item with a link
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main> <!----> the main element contains the main content of the document
-        <section id="home"> <!----> a section with an ID for linking
-            <h2>Home Section</h2>
-            <p>This is the home section of the website.</p>
-        </section>
-        <section id="about">
-            <h2>About Section</h2>
-            <p>This section provides information about the website.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact Section</h2>
-            <p>This section contains contact information.</p>
-        </section>
-    </main>
-    <footer> <!----> the footer element contains footer information
-        <p>&copy; 2023 My Website</p>
-    </footer>
+    <div id="header-container">
+        <header> <!----> the header element contains introductory content
+            <h1>Welcome to My Website</h1> <!----> main heading of the document
+            <img src="https://cdn.wikimg.net/en/zeldawiki/images/f/fc/EoW_Link_Render.png" alt="Logo" width="100" height="100"> <!----> an image with alt text
+            <nav> <!----> the nav element contains navigation links
+                <ul> <!----> an unordered list 
+                    <li><a href="#home">Home</a></li> <!----> list item with a link
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+    <div id="main-container">
+        <main> <!----> the main element contains the main content of the document
+            <section id="home"> <!----> a section with an ID for linking
+                <h2>Home Section</h2>
+                <p>This is the home section of the website.</p>
+            </section>
+            <section id="about">
+                <h2>About Section</h2>
+                <p>This section provides information about the website.</p>
+            </section>
+            <section id="contact">
+                <h2>Contact Section</h2>
+                <p>This section contains contact information.</p>
+            </section>
+        </main>
+    </div>
+    <div id="footer-container">
+        <footer> <!----> the footer element contains footer information
+            <p>&copy; 2023 My Website</p>
+        </footer>
+    </div>
 </body> <!----> end of the body element
-</html> <!----> end of the HTML document        
+</html> <!----> end of the HTML document
