--- a/Portfolio/pramodportfolio.html
+++ b/Portfolio/pramodportfolio.html
@@ -7,9 +7,9 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(45deg, #ff0066, #ffcc00, #33ccff, #9933ff);
+            background: linear-gradient(45deg, violet, indigo, blue, green, yellow, orange, red);
             background-size: 400% 400%;
-            animation: gradientAnimation 8s ease infinite;
+            animation: gradientAnimation 10s ease infinite;
             color: white;
             margin: 0;
             padding: 0;
