--- a/Portfolio/HTML/pramodportfolio.html
+++ b/Portfolio/HTML/pramodportfolio.html
@@ -93,6 +93,16 @@
             background: white;
             color: #333;
         }
+
+        #social-links a.scaler {
+            background: #0b0b45;
+            border-color: #0b0b45;
+        }
+
+        #social-links a.scaler:hover {
+            background: white;
+            color: #0b0b45;
+        }
     </style>
 </head>
 <body>
@@ -111,6 +121,9 @@
                 </a>
                 <a href="https://github.com/msdpramod" target="_blank" class="github">
                     <img src="./assets/github logo.png" alt="GitHub Logo"> GitHub
+                </a>
+                <a href="https://www.scaler.com/academy/profile/" target="_blank" class="scaler">
+                    <img src="./assets/scaler-academy logo 2.png" alt="Scaler Logo"> Scaler
                 </a>
             </div>
         </div>
