--- a/Learnings/Forms.html
+++ b/Learnings/Forms.html
@@ -13,12 +13,37 @@
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
         <br><br>
+        <label for="phone">Phone:</label>
+        <input type="tel" id="phone" name="phone" maxlength="10">
+        <br><br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
+        <br><br>
+        <label for ="Number of items">Number of items:</label>
+        <input type="number" id="items" name="items" min="1" max="20">
+        <br><br>
+        <label for =" Date">Date:</label>
+        <input type="date" id="date" name="date">
+        <br><br>
+        <label for ="items">Items:</label>
+        <input type="checkbox" id="item1" name="items" value="Item 1">
+        <label for="item1">Item 1</label>
+        <input type="checkbox" id="item2" name="items" value="Item 2">
+        <label for="item2">Item 2</label>
+        <input type="checkbox" id="item3" name="items" value="Item 3">
+        <label for="item3">Item 3</label>
+        <br><br>
+        <label for="radio">Select an option:</label>
+        <input type="radio" id="option1" name="options" value="Option 1">
+        <label for="option1">Option 1</label>
+        <input type="radio" id="option2" name="options" value="Option 2">
+        <label for="option2">Option 2</label>
+        <input type="radio" id="option3" name="options" value="Option 3">
+        <label for="option3">Option 3</label>
         <br><br>
         <input type="submit" value="Submit">
         <input type="reset" value="Reset">                      
     </form>
-    
+
 </body>
 </html>
