--- a/Portfolio/HTML/pramodportfolio.html
+++ b/Portfolio/HTML/pramodportfolio.html
@@ -4,106 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pramod-Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: linear-gradient(45deg, violet, indigo, blue, green, yellow, orange, red);
-            background-size: 400% 400%;
-            animation: gradientAnimation 10s ease infinite;
-            color: white;
-            margin: 0;
-            padding: 0;
-        }
-
-        @keyframes gradientAnimation {
-            0% { background-position: 0% 50%; }
-            25% { background-position: 50% 50%; }
-            50% { background-position: 100% 50%; }
-            75% { background-position: 50% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-
-        header {
-            text-align: center;
-            padding: 20px;
-        }
-
-        #profile-image {
-            border-radius: 50%;
-            margin: 20px 0;
-            border: 3px solid white;
-        }
-
-        #social-links {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        #social-links a {
-            text-decoration: none;
-            color: white;
-            font-size: 1.2rem;
-            padding: 10px 20px;
-            border: 2px solid white;
-            border-radius: 5px;
-            transition: all 0.3s ease;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        #social-links a img {
-            width: 25px;
-            height: 25px;
-            border: 2px solid white; /* White border around logos */
-            border-radius: 50%; /* Circular logos */
-            padding: 3px; /* Space between logo and border */
-            background: white; /* White background for better visibility */
-        }
-
-        /* Custom button colors */
-        #social-links a.linkedin {
-            background: #0077b5;
-            border-color: #0077b5;
-        }
-
-        #social-links a.linkedin:hover {
-            background: white;
-            color: #0077b5;
-        }
-
-        #social-links a.leetcode {
-            background: #f89f1b;
-            border-color: #f89f1b;
-        }
-
-        #social-links a.leetcode:hover {
-            background: white;
-            color: #f89f1b;
-        }
-
-        #social-links a.github {
-            background: #333;
-            border-color: #333;
-        }
-
-        #social-links a.github:hover {
-            background: white;
-            color: #333;
-        }
-
-        #social-links a.scaler {
-            background: #0b0b45;
-            border-color: #0b0b45;
-        }
-
-        #social-links a.scaler:hover {
-            background: white;
-            color: #0b0b45;
-        }
-    </style>
+    <link rel="stylesheet" href="/Portfolio/CSS/portfolio.css " >
 </head>
 <body>
     <header>
