all the changes

--- a/Learnings/HTML/ForCssExample.html
+++ b/Learnings/HTML/ForCssExample.html
@@ -18,5 +18,9 @@
 <body>
     <h1> Hi this class is about CSS designs</h1>
     <h2> This is a subheading</h2>
+    <p class="redclass"> This is a paragraph</p>
+    <p class="greenclass"> This is another paragraph</p>
+    <p> This is a third paragraph</p>
+    <p> This is a fourth paragraph</p>
 </body>
 </html>
