--- a/Portfolio/HTML/pramodportfolio.html
+++ b/Portfolio/HTML/pramodportfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pramod-Portfolio</title>
-    <link rel="stylesheet" href="/Portfolio/CSS/portfolio.css " >
+    <link rel="stylesheet" href="/FULLSTACK/Portfolio/CSS/portfolio.css" >
 </head>
 <body>
     <header>
@@ -24,7 +24,7 @@
                     <img src="./assets/github logo.png" alt="GitHub Logo"> GitHub
                 </a>
                 <a href="https://www.scaler.com/academy/profile/" target="_blank" class="scaler">
-                    <img src="./assets/scaler-academy logo 2.png" alt="Scaler Logo"> Scaler
+                    <img src="./assets/Scaler Logo.png" alt="Scaler Logo"> Scaler
                 </a>
             </div>
         </div>
