--- a/Learnings/JavaScript/index.html
+++ b/Learnings/JavaScript/index.html
@@ -6,10 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
+    <script src="script.js"></script> 
         // JavaScript code goes here
-        console.log("Hello, World!");
-    </script>
        
 </body>
 </html>
